--- a/index.html
+++ b/index.html
@@ -1,57 +1,52 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - PROJECT 2: BUILD A RESPONSIVE BLOG THEME</title>
+  <title>Debora's Responsive Blog</title>
   <link rel="stylesheet" href="./style.css">
-
 </head>
-<body>
-<!-- partial:index.partial.html -->
-t-<!DOCTYPE html>
-<!-- -->
-<head>
-<link href="/normalize.css" rel="stylesheet">
-</head>
+  
 <body>
   <header>
     <img src="https://avatars.githubusercontent.com/u/99288370?v=4" alt="Profile photo" width="200" height="200">
     <h1>Debora's Blog</h1>
-    <div class="container">
-    <ul class="menu">
+    <div class="container"><ul class="menu">
       <li><a href="#AboutMe" class="blue">About Me</a></li>
       <li><a href="#Projects">Projects</a></li>
       <li class="has-submenu"><a href="#Contact">Contact</a>
         <ul>
         <li><a href="#MyEmail">Email</a></li>
         <li><a href="#MyGithub">Github</a></li>
-      </ul>
+        </ul>
         </li>
     </ul>
       </div>
   </header>
+  
   <article>
     <p id="AboutMe"><h2>About me</h2></p>
-  <p>Hello there, My name is Débora and I'm brazilian. My first contact with building websites was when I was 14yo, it was a simple page in WIX, which I made to sell some t-shirts and it worked! But, then my trajetory had nothing to do with programming, I did many others things throught the years, like teaching math in particular classes. Nowadays, I have a bachelor's in Civil Engineering... However, I still have a passion for the web development, and as long as I'm a tech enthusiast I'm currently learning HTML, CSS and JavaScript by my own. My goal is learning more and more. You can read more about what is web development in this link: <a href="https://developer.mozilla.org/pt-BR/docs/Learn" target="_blank"> MDN Web Docs community</a>.</p>
-  <button>Like</button>
+    <p>Hello there, My name is Débora and I'm brazilian. My first contact with building websites was when I was 14yo, it was a simple page in WIX, which I made to sell some t-shirts and it worked! But, then my trajetory had nothing to do with programming, I did many others things throught the years, like teaching math in particular classes. Nowadays, I have a bachelor's in Civil Engineering... However, I still have a passion for the web development, and as long as I'm a tech enthusiast I'm currently learning HTML, CSS and JavaScript by my own. My goal is learning more and more. You can read more about what is web development in this link: <a href="https://developer.mozilla.org/pt-BR/docs/Learn" target="_blank"> MDN Web Docs community</a>.</p>
+    <button>Like</button>
   </article>
+  
   <article>
   <p id="Projects"><h2>Projects</h2></p>
   <p>When you're in the process of learning something new - and you know it demands such an effort, like programming - you gotta practice, test and do little projects. Like this simple blog page. Practice is the key! Will it be easy? No. But it's surely be worthing after all. Don't give up.</p>
   </article>
+
   <article>
   <p id="Contact"><h2>Contact</h2></p>
     <p id="MyEmail"><b>My email:</b> deboracodework@gmail.com</p>
     <p id="MyGithub"><b>My github:</b> github.com/deboracode</p>
   </article>
+
 <script>
   $("button").on("click", function () {alert("You liked!")});
   </script>
   </body>
 <br><hr>
+
 <footer><small>© 2022 <br> All Rights Reserved.</small></footer>
-</html>
-<!-- partial -->
-  
+
 </body>
 </html>
